# ota-test

./: .env-example  .gitignore  Cargo.toml  README.md  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: configuration.rs  http_static.rs  main.rs  ota.rs  server.html  wifi_init.rs
src/html/: index.html  ota.html  settings.html
