[package]
name = "ota-test"
version = "0.1.0"
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
edition = "2021"
resolver = "2"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" } 

[features]
native = ["esp-idf-sys/native"]
default = ["native", "experimental"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.31.9", features = ["binstart"] }
embedded-svc = "0.22.1"
esp-idf-svc = { version = "0.42.5" }
twoway = "0.2.2"
anyhow = "1"
log = "0.4.14"
esp-idf-hal = "0.38.1"
heapless = "0.7"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.144",  default-features = true, features = ["derive"] }
serde_json = "1.0.86"
url = "2.3.1"
lazy_static = "1.4.0"
[build-dependencies]
embuild = "0.30"
anyhow = "1"


[package.metadata.espflash]
partition_table = "partitions.csv"
